Removed example app

--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,13 @@ yarn-error.*
 
 # local env files
 .env*.local
+.envrc
+.direnv
 
 # typescript
 *.tsbuildinfo
+
+# Build folders
+android/
 
 app-example
