--- a/hls/nginx.conf
+++ b/hls/nginx.conf
@@ -16,8 +16,9 @@ http {
         server_name localhost;
 
         location /hls/ {
+            add_header 'Access-Control-Allow-Origin' '*';
             types {
-                application/vnd.apple.mpegurl m3u8;
+                application/x-mpegURL m3u8;
                 video/mp2t ts;
             }
             alias /usr/share/nginx/html/hls/;
