--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-video": "^6.10.2",
-    "react-native-vlc-media-player": "^1.0.80",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-screen-orientation": "~8.0.4",
+    "expo-navigation-bar": "~4.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
