--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.97"
+anyhow = "1.0.98"
 futures-util = "0.3.31"
-interpolation = "0.3.0"
-tokio = { version = "1.44.0", features = ["full"] }
+tokio = { version = "1.44.2", features = ["full"] }
 tokio-tungstenite = "0.26.2"
+rppal = "0.22.1"
